--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -123,5 +123,7 @@
 	"Contacter": "Contacter",
 	"groupes de modifications": "groupes de modifications",
 	"Inscrit sur OSM le": "Inscrit sur OSM le",
-	"participations aux projets du mois": "participations aux projets du mois"
+	"participations aux projets du mois": "participations aux projets du mois",
+	"Accueil": "Accueil",
+	"Autres attributs": "Autres attributs"
 }
