--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -6,7 +6,7 @@
 	"Ce projet adhère aux": "This project adheres to",
 	"Principes pour le développement numérique": "Principles for digital development",
 	"Une erreur s'est produite à la connexion, veuillez réessayer": "An error happened during login, please retry",
-	"Rechercher un lieu...": "Search a place...",
+	"Rechercher un lieu...": "Search a place…",
 	"Plus de détails": "More details",
 	"Avec l'éditeur intégré": "With integrated editor",
 	"Avec une appli mobile": "With mobile app",
@@ -24,7 +24,7 @@
 	"Prêt à intégrer": "Ready to integrate",
 	"Avec photo": "With pictures",
 	"Anonymes": "Anonymous",
-	"Aucun signalement pour l'instant !": "No issues yet !",
+	"Aucun signalement pour l'instant !": "No issues yet!",
 	"commentaire(s)": "comment(s)",
 	"Anonyme": "Anonymous",
 	"Ouvert": "Open",
@@ -39,7 +39,7 @@
 	"Notifications non-lues": "Unread notifications",
 	"Notifications": "Notifications",
 	"Mes badges": "My badges",
-	"Merci !": "Thanks !",
+	"Merci !": "Thanks!",
 	"Podium": "Podium",
 	"Inscrivez-vous ou connectez-vous pour voir le podium": "Register or log in to see podium",
 	"Pseudo": "Nickname",
@@ -53,7 +53,7 @@
 	"En ce moment": "At the moment",
 	"Statistiques": "Statistics",
 	"Données": "Data",
-	"Retour à l'accueil": "Back to hompage",
+	"Retour à l'accueil": "Back to homepage",
 	"Accueil | Découvrir le projet du mois": "Homepage | Discover project of the month",
 	"Erreur %s : rien que le désert ici...": "Error %s : nothing but desert here...",
 	"Erreur %s": "Error %s",
@@ -66,62 +66,64 @@
 	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.": "This project of the month is finished, but mapping in OpenStreetMap goes on ! You can continue improve data using our tools and documentation.",
 	"Documentation complète": "Full documentation",
 	"Article de blog": "Blog article",
-	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :",
-	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Retrouvez les précédents projets du mois, leurs outils, statistiques et données.",
-	"En savoir plus": "En savoir plus",
-	"Code source du projet": "Code source du projet",
-	"Projets précédents": "Projets précédents",
-	"Précédent": "Précédent",
-	"Suivant": "Suivant",
-	"Afficher/masquer la couche": "Afficher/masquer la couche",
-	"Télécharger un fichier KML pour contribuer avec une application de smartphone": "Télécharger un fichier KML pour contribuer avec une application de smartphone",
-	"Exporter les points à vérifier": "Exporter les points à vérifier",
-	"Objets à cet endroit": "Objets à cet endroit",
-	"Modifier la position": "Modifier la position",
-	"Oui": "Oui",
-	"Non": "Non",
-	"Ne sais pas": "Ne sais pas",
-	"Envoyer les informations sur OpenStreetMap": "Envoyer les informations sur OpenStreetMap",
-	"Retourner à la carte sans envoyer à OpenStreetMap": "Retourner à la carte sans envoyer à OpenStreetMap",
-	"Annuler": "Annuler",
-	"La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.": "La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.",
-	"Commentaire": "Commentaire",
-	"Envoyer le commentaire de carte sur OpenStreetMap": "Envoyer le commentaire de carte sur OpenStreetMap",
-	"Créer": "Créer",
-	"Envoi en cours, veuillez patienter": "Envoi en cours, veuillez patienter",
-	"Votre contribution a bien été prise en compte, merci pour votre participation !": "Votre contribution a bien été prise en compte, merci pour votre participation !",
-	"Retour à la carte": "Retour à la carte",
+	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "All the data produced before, during and after the project of the month are available at the following addresses:",
+	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Find the previous projects of the month, their tools, statistics and data.",
+	"En savoir plus": "Read more about it",
+	"Code source du projet": "Project source code",
+	"Projets précédents": "Previous projects",
+	"Précédent": "Previous",
+	"Suivant": "Next",
+	"Afficher/masquer la couche": "Show/hide layer",
+	"Télécharger un fichier KML pour contribuer avec une application de smartphone": "Upload a KML file to contribute with a smartphone app",
+	"Exporter les points à vérifier": "Export points to be checked",
+	"Objets à cet endroit": "Objects at this location",
+	"Modifier la position": "Change the location",
+	"Oui": "Yes",
+	"Non": "No",
+	"Ne sais pas": "Don't know",
+	"Envoyer les informations sur OpenStreetMap": "Upload data to OpenStreetMap",
+	"Retourner à la carte sans envoyer à OpenStreetMap": "Go back to the map without updating OpenStreetMap",
+	"Annuler": "Cancel",
+	"La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.": "The creation of notes is reserved for ambiguous cases. If the situation is obvious, prefer another editing mode.",
+	"Commentaire": "Comment",
+	"Envoyer le commentaire de carte sur OpenStreetMap": "Send comment to OpenStreetMap",
+	"Créer": "Create",
+	"Envoi en cours, veuillez patienter": "Sending in progress, please wait",
+	"Votre contribution a bien été prise en compte, merci pour votre participation !": "Your contribution has been taken into account, thank you!",
+	"Retour à la carte": "Back to the map",
 	"OK": "OK",
-	"Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap": "Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap",
-	"Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap": "Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap",
-	"Si vous quittez la page, les modifications en cours seront perdues.": "Si vous quittez la page, les modifications en cours seront perdues.",
-	"Valider": "Valider",
-	"Des données sont manquantes, merci de réessayer": "Des données sont manquantes, merci de réessayer",
-	"Une erreur s'est produite, merci de réessayer plus tard": "Une erreur s'est produite, merci de réessayer plus tard",
-	"Objet concerné :": "Objet concerné :",
-	"Plus d'infos sur la résolution de cette note": "Plus d'infos sur la résolution de cette note",
-	"Badges obtenus": "Badges obtenus",
-	"Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !": "Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !",
-	"Nouveau badge": "Nouveau badge",
-	"Voir tous les badges": "Voir tous les badges",
-	"Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)": "Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)",
-	"Une erreur s'est produite lors de la modification de la note": "Une erreur s'est produite lors de la modification de la note",
-	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard",
-	"Attributs": "Attributs",
-	"Attributs à renseigner": "Attributs à renseigner",
-	"C'est fait": "C'est fait",
-	"Rien ici": "Rien ici",
-	"Intégrer cet objet": "Intégrer cet objet",
-	"Vous devez être connecté pour marquer la note comme résolue.": "Vous devez être connecté pour marquer la note comme résolue.",
-	"Participer à la discussion sur cette note": "Participer à la discussion sur cette note",
-	"✘ Rien ici": "✘ Rien ici",
-	"Zoomez ou lancez une recherche pour commencer": "Zoomez ou lancez une recherche pour commencer",
-	"Chargement en cours": "Chargement en cours",
-	"Déplacer la carte pour positionner l'objet à créer": "Déplacer la carte pour positionner l'objet à créer",
-	"Afficher / masquer l'imagerie satellite": "Afficher / masquer l'imagerie satellite",
-	"Profil OpenStreetMap": "Profil OpenStreetMap",
-	"Contacter": "Contacter",
-	"groupes de modifications": "groupes de modifications",
-	"Inscrit sur OSM le": "Inscrit sur OSM le",
-	"participations aux projets du mois": "participations aux projets du mois"
+	"Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap": "You are logged in: this form will directly edit OpenStreetMap",
+	"Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap": "You are not logged in: this form will create an OpenStreetMap note",
+	"Si vous quittez la page, les modifications en cours seront perdues.": "If you leave the page, the current modifications will be lost.",
+	"Valider": "Ok",
+	"Des données sont manquantes, merci de réessayer": "Some data are missing, please try again",
+	"Une erreur s'est produite, merci de réessayer plus tard": "An error occurred, please try again later",
+	"Objet concerné :": "Object affected:",
+	"Plus d'infos sur la résolution de cette note": "More about the resolution of this note",
+	"Badges obtenus": "Badges received",
+	"Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !": "You are not logged in with an OpenStreetMap account. Register or log in to collect badges!",
+	"Nouveau badge": "New badge",
+	"Voir tous les badges": "See all badges",
+	"Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)": "Marked as solved in the project of the month (via projetdumois.fr)",
+	"Une erreur s'est produite lors de la modification de la note": "An error occurred while editing the note",
+	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "An error occurred during registration, please try again later.",
+	"Attributs": "Informations",
+	"Attributs à renseigner": "Information to be filled in",
+	"C'est fait": "Done",
+	"Rien ici": "Nothing here",
+	"Intégrer cet objet": "Integrate this object",
+	"Vous devez être connecté pour marquer la note comme résolue.": "You must be logged in to set the note as resolved.",
+	"Participer à la discussion sur cette note": "Contribute to the discussion on this note",
+	"✘ Rien ici": "✘ Nothing here",
+	"Zoomez ou lancez une recherche pour commencer": "Zoom in or search a place to start",
+	"Chargement en cours": "Loading in progress",
+	"Déplacer la carte pour positionner l'objet à créer": "Move the map to locate the object to be created.",
+	"Afficher / masquer l'imagerie satellite": "Show / hide satellite imagery",
+	"Profil OpenStreetMap": "OpenStreetMap profile",
+	"Contacter": "Contact",
+	"groupes de modifications": "changesets",
+	"Inscrit sur OSM le": "Registered on OSM on",
+	"participations aux projets du mois": "contributions to the projects of the month",
+	"Accueil": "Homepage",
+	"Autres attributs": "Other attributes"
 }
