--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -125,5 +125,7 @@
 	"Inscrit sur OSM le": "Registered on OSM on",
 	"participations aux projets du mois": "contributions to the projects of the month",
 	"Accueil": "Homepage",
-	"Autres attributs": "Other attributes"
+	"Autres attributs": "Other attributes",
+	"Participer": "Participer",
+	"En ce moment : %s": "En ce moment : %s"
 }
