--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -125,5 +125,7 @@
 	"Inscrit sur OSM le": "Inscrit sur OSM le",
 	"participations aux projets du mois": "participations aux projets du mois",
 	"Accueil": "Accueil",
-	"Autres attributs": "Autres attributs"
+	"Autres attributs": "Autres attributs",
+	"Participer": "Participer",
+	"En ce moment : %s": "En ce moment : %s"
 }
