Various fixes and updates for i18n merge

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -128,5 +128,8 @@
 	"Autres attributs": "Autres attributs",
 	"Participer": "Participer",
 	"En ce moment : %s": "En ce moment : %s",
-	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Retrouvez d'autres projets du mois, leurs outils, statistiques et données."
+	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Retrouvez d'autres projets du mois, leurs outils, statistiques et données.",
+	"Autres projets": "Autres projets",
+	"En ce moment : %s projets en cours": "En ce moment : %s projets en cours",
+	"OpenStreetMap France": "OpenStreetMap France"
 }
