--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -126,7 +126,10 @@
 	"participations aux projets du mois": "contributions to the projects of the month",
 	"Accueil": "Homepage",
 	"Autres attributs": "Other attributes",
-	"Participer": "Participer",
-	"En ce moment : %s": "En ce moment : %s",
-	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Retrouvez d'autres projets du mois, leurs outils, statistiques et données."
+	"Participer": "Participate",
+	"En ce moment : %s": "At the moment: %s",
+	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Find other projects of the month, their tools, statistics and data.",
+	"Autres projets": "Other projects",
+	"En ce moment : %s projets en cours": "At the moment: %s running projects",
+	"OpenStreetMap France": "OpenStreetMap France"
 }
