Fix missing translation

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -131,5 +131,6 @@
 	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Find other projects of the month, their tools, statistics and data.",
 	"Autres projets": "Other projects",
 	"En ce moment : %s projets en cours": "At the moment: %s running projects",
-	"OpenStreetMap France": "OpenStreetMap France"
+	"OpenStreetMap France": "OpenStreetMap France",
+	"Placer à la position exacte": "Move to exact location"
 }
