--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -131,5 +131,6 @@
 	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Retrouvez d'autres projets du mois, leurs outils, statistiques et données.",
 	"Autres projets": "Autres projets",
 	"En ce moment : %s projets en cours": "En ce moment : %s projets en cours",
-	"OpenStreetMap France": "OpenStreetMap France"
+	"OpenStreetMap France": "OpenStreetMap France",
+	"Placer à la position exacte": "Placer à la position exacte"
 }
