--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -131,5 +131,6 @@
 	"En ce moment : %s projets en cours": "At the moment: %s running projects",
 	"OpenStreetMap France": "OpenStreetMap France",
 	"Placer à la position exacte": "Move to exact location",
-	"Rien ici / déjà fait": "Nothing here / Already done"
+	"Rien ici / déjà fait": "Nothing here / Already done",
+	"Filtres": "Filters"
 }
