--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -131,5 +131,6 @@
 	"En ce moment : %s projets en cours": "En ce moment : %s projets en cours",
 	"OpenStreetMap France": "OpenStreetMap France",
 	"Placer à la position exacte": "Placer à la position exacte",
-	"Rien ici / déjà fait": "Nothing here / Already done"
+	"Rien ici / déjà fait": "Rien ici / déjà fait",
+	"Filtres": "Filtres"
 }
