--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -132,5 +132,10 @@
 	"OpenStreetMap France": "OpenStreetMap France",
 	"Placer à la position exacte": "Placer à la position exacte",
 	"Rien ici / déjà fait": "Rien ici / déjà fait",
-	"Filtres": "Filtres"
+	"Filtres": "Filtres",
+	"Contributions par zone": "Contributions par zone",
+	"Région": "Région",
+	"Département": "Département",
+	"Commune": "Commune",
+	"Contributions": "Contributions"
 }
