Filter boundary tiles by project + admin_level, fix DB processing

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -137,5 +137,6 @@
 	"Région": "Région",
 	"Département": "Département",
 	"Commune": "Commune",
-	"Contributions": "Contributions"
+	"Contributions": "Contributions",
+	"Nombre total": "Nombre total"
 }
