Ajout des liens d'aide sur les entrées de l'éditeur intégré et la documentation associée.
Minor tweaks on help badge in editor

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -141,5 +141,7 @@
 	"Nombre total": "Nombre total",
 	"Maintenance en cours": "Maintenance en cours",
 	"Le site est en cours de maintenance, la magie opère en coulisses !": "Le site est en cours de maintenance, la magie opère en coulisses !",
-	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Veuillez réessayer un peu plus tard, merci pour votre compréhension."
+	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Veuillez réessayer un peu plus tard, merci pour votre compréhension.",
+	"D'autres projets": "D'autres projets",
+	"Plus d'infos sur ce champ": "Plus d'infos sur ce champ"
 }
