--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -140,5 +140,6 @@
 	"Contributions": "Contributions",
 	"Maintenance en cours": "Ongoing maintenance",
 	"Le site est en cours de maintenance, la magie opère en coulisses !": "Our website is undergoing maintenance, magic happens behind the scenes !",
-	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Please try again later, thanks for your understanding."
+	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Please try again later, thanks for your understanding.",
+	"Plus d'infos sur ce champ": "More details about this field"
 }
