Minor improvements on UI with partial/incomplete projects

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -141,5 +141,6 @@
 	"Maintenance en cours": "Ongoing maintenance",
 	"Le site est en cours de maintenance, la magie opère en coulisses !": "Our website is undergoing maintenance, magic happens behind the scenes !",
 	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Please try again later, thanks for your understanding.",
-	"Plus d'infos sur ce champ": "More details about this field"
+	"Plus d'infos sur ce champ": "More details about this field",
+	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Find all data directly on OpenStreetMap website."
 }
