--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -143,5 +143,6 @@
 	"Le site est en cours de maintenance, la magie opère en coulisses !": "Le site est en cours de maintenance, la magie opère en coulisses !",
 	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Veuillez réessayer un peu plus tard, merci pour votre compréhension.",
 	"D'autres projets": "D'autres projets",
-	"Plus d'infos sur ce champ": "Plus d'infos sur ce champ"
+	"Plus d'infos sur ce champ": "Plus d'infos sur ce champ",
+	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap."
 }
