Use project end date only for info in main page, generate summarized stats for long projects

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -144,5 +144,12 @@
 	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Veuillez réessayer un peu plus tard, merci pour votre compréhension.",
 	"D'autres projets": "D'autres projets",
 	"Plus d'infos sur ce champ": "Plus d'infos sur ce champ",
-	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap."
+	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.",
+	"Catalyseur d'énergies pour OpenStreetMap v%s": "Catalyseur d'énergies pour OpenStreetMap v%s",
+	"A propos": "A propos",
+	"Les projets": "Les projets",
+	"À propos": "À propos",
+	"En ce moment : %s projets prioritaires": "En ce moment : %s projets prioritaires",
+	"Tous nos projets": "Tous nos projets",
+	"Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données.": "Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données."
 }
