Distinguish in website soft/hard project ends

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -143,5 +143,7 @@
 	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Please try again later, thanks for your understanding.",
 	"Plus d'infos sur ce champ": "More details about this field",
 	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Find all data directly on OpenStreetMap website.",
-	"A propos": "About"
+	"A propos": "About",
+	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.": "This project has ended, but mapping in OpenStreetMap goes on! You can contribute on other topics.",
+	"Projet terminé": "Project ended"
 }
