Display last statistics update

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -145,5 +145,6 @@
 	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Find all data directly on OpenStreetMap website.",
 	"A propos": "About",
 	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.": "This project has ended, but mapping in OpenStreetMap goes on! You can contribute on other topics.",
-	"Projet terminé": "Project ended"
+	"Projet terminé": "Project ended",
+	"Dernière mise à jour : ": "Last update: "
 }
