--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -153,5 +153,6 @@
 	"Tous nos projets": "Tous nos projets",
 	"Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données.": "Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données.",
 	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.": "Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.",
-	"Projet terminé": "Projet terminé"
+	"Projet terminé": "Projet terminé",
+	"Dernière mise à jour : ": "Dernière mise à jour : "
 }
