Major rework for world scale, support of ways geometries, split features tables

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -134,6 +134,7 @@
 	"Rien ici / déjà fait": "Nothing here / Already done",
 	"Filtres": "Filters",
 	"Contributions par zone": "Contributions per area",
+	"Pays": "Country",
 	"Région": "Region",
 	"Département": "County",
 	"Commune": "City",
