--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -134,6 +134,7 @@
 	"Rien ici / déjà fait": "Rien ici / déjà fait",
 	"Filtres": "Filtres",
 	"Contributions par zone": "Contributions par zone",
+	"Pays": "Pays",
 	"Région": "Région",
 	"Département": "Département",
 	"Commune": "Commune",
