--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -1,7 +1,7 @@
 {
 	"Catalyseur d'énergies pour OpenStreetMap v%s": "Energy catalyst for OpenStreetMap v%s",
 	"Projet du mois OpenStreetMap": "OpenStreetMap Project of the Month",
-	"Copyright 2024 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0": "Copyright 2024 ProjetDuMois.fr - Developed under AGPL 3.0 license",
+	"Copyright 2024-2025 Podoma - Développé sous licence libre AGPL 3.0": "Copyright 2024-2025 Podoma - Developed under AGPL 3.0 license",
 	"Un projet supporté par l'association": "A project supported by",
 	"Ce projet adhère aux": "This project adheres to",
 	"Principes pour le développement numérique": "Principles for digital development",
@@ -104,7 +104,7 @@
 	"Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !": "You are not logged in with an OpenStreetMap account. Register or log in to collect badges!",
 	"Nouveau badge": "New badge",
 	"Voir tous les badges": "See all badges",
-	"Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)": "Marked as solved in the project of the month (via projetdumois.fr)",
+	"Marqué comme résolu dans le cadre du projet du mois": "Marked as solved in the project of the month",
 	"Une erreur s'est produite lors de la modification de la note": "An error occurred while editing the note",
 	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "An error occurred during registration, please try again later.",
 	"Attributs": "Informations",
