--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -1,151 +1,126 @@
 {
-	"Catalyseur d'énergies pour OpenStreetMap v%s": "Energy catalyst for OpenStreetMap v%s",
-	"Projet du mois OpenStreetMap": "OpenStreetMap Project of the Month",
-	"Copyright 2024-2025 Podoma - Développé sous licence libre AGPL 3.0": "Copyright 2024-2025 Podoma - Developed under AGPL 3.0 license",
-	"Un projet supporté par l'association": "A project supported by",
-	"Ce projet adhère aux": "This project adheres to",
-	"Principes pour le développement numérique": "Principles for digital development",
-	"Une erreur s'est produite à la connexion, veuillez réessayer": "An error happened during login, please retry",
-	"Rechercher un lieu...": "Search a place…",
-	"Plus de détails": "More details",
-	"Avec l'éditeur intégré": "With integrated editor",
-	"Avec une appli mobile": "With mobile app",
-	"Avec iD": "With iD",
-	"Avec JOSM": "With JOSM",
-	"Via Osmose": "With Osmose",
-	"Via une note de carte": "With a map note",
-	"Via OSM.org": "With OSM.org",
-	"Via Mapillary": "With Mapillary",
-	"Retour à la page d'accueil": "Back to homepage",
-	"Projet du mois": "Project of the Month",
-	"Carte": "Map",
-	"Liste": "List",
-	"Afficher uniquement les signalements": "Show only issues",
-	"Prêt à intégrer": "Ready to integrate",
-	"Avec photo": "With pictures",
-	"Anonymes": "Anonymous",
-	"Aucun signalement pour l'instant !": "No issues yet!",
-	"commentaire(s)": "comment(s)",
-	"Anonyme": "Anonymous",
-	"Ouvert": "Open",
-	"Fermé": "Closed",
-	"Réouvert": "Reopened",
-	"Attributs renseignés :": "Defined tags :",
-	"Compléter": "Complete",
-	"Éditer": "Edit",
-	"Se déconnecter": "Log out",
-	"S'inscrire / Se connecter": "Register / log in",
-	"Utilisateur": "User",
-	"Notifications non-lues": "Unread notifications",
+	"Logout": "Logout",
+	"Register / Login": "Register / Login",
+	"An error happened during login, please retry": "An error happened during login, please retry",
+	"Home": "Home",
+	"Projects": "Projects",
+	"About": "About",
+	"User": "User",
+	"Unread notifications": "Unread notifications",
 	"Notifications": "Notifications",
-	"Mes badges": "My badges",
-	"Merci !": "Thanks!",
+	"My badges": "My badges",
+	"All our projects": "All our projects",
+	"Find all projects, tools, statistics and data.": "Find all projects, tools, statistics and data.",
+	"Copyright 2024-2025 Podoma - Released under AGPL 3.0 license": "Copyright 2024-2025 Podoma - Released under AGPL 3.0 license",
+	"Supported by": "Supported by",
+	"Adheres to": "Adheres to",
+	"Principles for digital development": "Principles for digital development",
+	"Currently": "Currently",
+	"Statistics": "Statistics",
+	"Data": "Data",
+	"Contribute": "Contribute",
+	"How to contribute": "How to contribute",
+	"This project is done, but mapping in OpenStreetMap never ends! You can continue to improve data using our tools and documentation.": "This project is done, but mapping in OpenStreetMap never ends! You can continue to improve data using our tools and documentation.",
+	"Full documentation": "Full documentation",
 	"Podium": "Podium",
-	"Inscrivez-vous ou connectez-vous pour voir le podium": "Register or log in to see podium",
-	"Pseudo": "Nickname",
+	"Register or log in to see podium": "Register or log in to see podium",
+	"Username": "Username",
 	"Points": "Points",
-	"Avancement": "Progress",
+	"Contributions per area": "Contributions per area",
+	"Progress": "Progress",
 	"Notes": "Notes",
-	"Clés fréquentes": "Frequent keys",
-	"jours restants": "days left",
-	"jours de contributions": "mapping days",
-	"personnes ayant contribué": "people who contributed",
-	"En ce moment": "At the moment",
-	"Statistiques": "Statistics",
-	"Données": "Data",
-	"Retour à l'accueil": "Back to homepage",
-	"Accueil | Découvrir le projet du mois": "Homepage | Discover project of the month",
-	"Erreur %s : rien que le désert ici...": "Error %s : nothing but desert here...",
-	"Erreur %s": "Error %s",
-	"Contribuer": "Contribute",
-	"Un grand merci à tous !": "Many thanks to all of you !",
-	"Merci à toutes les contributrices et tous les contributeurs d'avoir fait de ce projet un succès. Sans vous tous, OpenStreetMap ne serait rien !": "Thanks to all the contributors for making this project a success. Without all of you, OpenStreetMap would be nothing !",
-	"Merci": "Thanks",
-	"Voir les statistiques": "See statistics",
-	"Comment participer": "How to contribute",
-	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.": "This project of the month is finished, but mapping in OpenStreetMap goes on ! You can continue improve data using our tools and documentation.",
-	"Documentation complète": "Full documentation",
-	"Article de blog": "Blog article",
-	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "All the data produced before, during and after the project of the month are available at the following addresses:",
-	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Find the previous projects of the month, their tools, statistics and data.",
-	"En savoir plus": "Read more about it",
-	"Code source du projet": "Project source code",
-	"Projets précédents": "Previous projects",
-	"Précédent": "Previous",
-	"Suivant": "Next",
-	"Afficher/masquer la couche": "Show/hide layer",
-	"Télécharger un fichier KML pour contribuer avec une application de smartphone": "Upload a KML file to contribute with a smartphone app",
-	"Exporter les points à vérifier": "Export points to be checked",
-	"Objets à cet endroit": "Objects at this location",
-	"Modifier la position": "Change the location",
-	"Oui": "Yes",
-	"Non": "No",
-	"Ne sais pas": "Don't know",
-	"Envoyer les informations sur OpenStreetMap": "Upload data to OpenStreetMap",
-	"Retourner à la carte sans envoyer à OpenStreetMap": "Go back to the map without updating OpenStreetMap",
-	"Annuler": "Cancel",
-	"La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.": "The creation of notes is reserved for ambiguous cases. If the situation is obvious, prefer another editing mode.",
-	"Commentaire": "Comment",
-	"Envoyer le commentaire de carte sur OpenStreetMap": "Send comment to OpenStreetMap",
-	"Créer": "Create",
-	"Envoi en cours, veuillez patienter": "Sending in progress, please wait",
-	"Votre contribution a bien été prise en compte, merci pour votre participation !": "Your contribution has been taken into account, thank you!",
-	"Retour à la carte": "Back to the map",
+	"Frequent keys": "Frequent keys",
+	"Last update: ": "Last update: ",
+	"contributors": "contributors",
+	"Total amount": "Total amount",
+	"Country": "Country",
+	"Region": "Region",
+	"Department": "Department",
+	"City": "City",
+	"Find all data directly on OpenStreetMap website.": "Find all data directly on OpenStreetMap website.",
+	"Other projects": "Other projects",
+	"Find other projects of the month, their tools, statistics and data.": "Find other projects of the month, their tools, statistics and data.",
+	"Previous": "Previous",
+	"Next": "Next",
+	"Go back to homepage": "Go back to homepage",
+	"Search for a place...": "Search for a place...",
+	"Map": "Map",
+	"List": "List",
+	"Show/hide layer": "Show/hide layer",
+	"Download a KML file to contribute with a smartphone app": "Download a KML file to contribute with a smartphone app",
+	"Export features to check": "Export features to check",
+	"List of features": "List of features",
+	"Edit location": "Edit location",
+	"Send info to OpenStreetMap": "Send info to OpenStreetMap",
+	"Go back to map without sending to OpenStreetMap": "Go back to map without sending to OpenStreetMap",
+	"Cancel": "Cancel",
+	"The creation of notes is reserved for ambiguous cases. If the situation is obvious, prefer another editing mode.": "The creation of notes is reserved for ambiguous cases. If the situation is obvious, prefer another editing mode.",
+	"Comment": "Comment",
+	"Send map comment to OpenStreetMap": "Send map comment to OpenStreetMap",
+	"Create": "Create",
+	"Sending in progress, please wait": "Sending in progress, please wait",
+	"Your contribution has been taken into account, thank you!": "Your contribution has been taken into account, thank you!",
+	"Go back to map": "Go back to map",
 	"OK": "OK",
-	"Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap": "You are logged in: this form will directly edit OpenStreetMap",
-	"Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap": "You are not logged in: this form will create an OpenStreetMap note",
-	"Si vous quittez la page, les modifications en cours seront perdues.": "If you leave the page, the current modifications will be lost.",
-	"Valider": "Ok",
-	"Des données sont manquantes, merci de réessayer": "Some data are missing, please try again",
-	"Une erreur s'est produite, merci de réessayer plus tard": "An error occurred, please try again later",
-	"Objet concerné :": "Object affected:",
-	"Plus d'infos sur la résolution de cette note": "More about the resolution of this note",
-	"Badges obtenus": "Badges received",
-	"Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !": "You are not logged in with an OpenStreetMap account. Register or log in to collect badges!",
-	"Nouveau badge": "New badge",
-	"Voir tous les badges": "See all badges",
-	"Marqué comme résolu dans le cadre du projet du mois": "Marked as solved in the project of the month",
-	"Une erreur s'est produite lors de la modification de la note": "An error occurred while editing the note",
-	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "An error occurred during registration, please try again later.",
-	"Attributs": "Informations",
-	"Attributs à renseigner": "Information to be filled in",
-	"C'est fait": "Done",
-	"Intégrer cet objet": "Integrate this object",
-	"Vous devez être connecté pour marquer la note comme résolue.": "You must be logged in to set the note as resolved.",
-	"Participer à la discussion sur cette note": "Contribute to the discussion on this note",
-	"Zoomez ou lancez une recherche pour commencer": "Zoom in or search a place to start",
-	"Chargement en cours": "Loading in progress",
-	"Déplacer la carte pour positionner l'objet à créer": "Move the map to locate the object to be created.",
-	"Afficher / masquer l'imagerie satellite": "Show / hide satellite imagery",
-	"Profil OpenStreetMap": "OpenStreetMap profile",
-	"Contacter": "Contact",
-	"groupes de modifications": "changesets",
-	"Inscrit sur OSM le": "Registered on OSM on",
-	"participations aux projets du mois": "contributions to the projects of the month",
-	"Accueil": "Homepage",
-	"Autres attributs": "Other attributes",
-	"Participer": "Participate",
-	"En ce moment : %s": "At the moment: %s",
-	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Find other projects of the month, their tools, statistics and data.",
-	"Autres projets": "Other projects",
-	"En ce moment : %s projets en cours": "At the moment: %s running projects",
-	"OpenStreetMap France": "OpenStreetMap France",
-	"Placer à la position exacte": "Move to exact location",
-	"Rien ici / déjà fait": "Nothing here / Already done",
-	"Filtres": "Filters",
-	"Contributions par zone": "Contributions per area",
-	"Pays": "Country",
-	"Région": "Region",
-	"Département": "County",
-	"Commune": "City",
-	"Contributions": "Contributions",
-	"Maintenance en cours": "Ongoing maintenance",
-	"Le site est en cours de maintenance, la magie opère en coulisses !": "Our website is undergoing maintenance, magic happens behind the scenes !",
-	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Please try again later, thanks for your understanding.",
-	"Plus d'infos sur ce champ": "More details about this field",
-	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Find all data directly on OpenStreetMap website.",
-	"A propos": "About",
-	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.": "This project has ended, but mapping in OpenStreetMap goes on! You can contribute on other topics.",
-	"Projet terminé": "Project ended",
-	"Dernière mise à jour : ": "Last update: "
+	"You are logged in: this form will directly edit OpenStreetMap": "You are logged in: this form will directly edit OpenStreetMap",
+	"You are not logged in: this form will create an OpenStreetMap note": "You are not logged in: this form will create an OpenStreetMap note",
+	"If you leave the page, the current modifications will be lost.": "If you leave the page, the current modifications will be lost.",
+	"Validate": "Validate",
+	"Some data are missing, please try again": "Some data are missing, please try again",
+	"An error occurred, please try again later": "An error occurred, please try again later",
+	"Related feature:": "Related feature:",
+	"Tags set:": "Tags set:",
+	"More about the resolution of this note": "More about the resolution of this note",
+	"Badges received": "Badges received",
+	"You are not logged in with an OpenStreetMap account. Register or log in to collect badges!": "You are not logged in with an OpenStreetMap account. Register or log in to collect badges!",
+	"Back to map": "Back to map",
+	"New badges": "New badges",
+	"Show all badges": "Show all badges",
+	"More details": "More details",
+	"With integrated editor": "With integrated editor",
+	"With mobile app": "With mobile app",
+	"With iD": "With iD",
+	"With JOSM": "With JOSM",
+	"With Osmose": "With Osmose",
+	"With a map note": "With a map note",
+	"With OSM.org": "With OSM.org",
+	"With Mapillary": "With Mapillary",
+	"Marked as solved during the project": "Marked as solved during the project",
+	"An error occurred while editing the note": "An error occurred while editing the note",
+	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard",
+	"Attributes": "Attributes",
+	"More details about this field": "More details about this field",
+	"Yes": "Yes",
+	"No": "No",
+	"Other tags": "Other tags",
+	"Tags to set": "Tags to set",
+	"It's done": "It's done",
+	"Nothing here / Already done": "Nothing here / Already done",
+	"Integrate this feature": "Integrate this feature",
+	"Opened": "Opened",
+	"Closed": "Closed",
+	"Re-opened": "Re-opened",
+	"Commented": "Commented",
+	"You must be logged in to set the note as resolved.": "You must be logged in to set the note as resolved.",
+	"💬 Comment": "💬 Comment",
+	"Contribute to the discussion on this note": "Contribute to the discussion on this note",
+	"Zoom in or search a place to start": "Zoom in or search a place to start",
+	"Loading in progress": "Loading in progress",
+	"Move to exact location": "Move to exact location",
+	"Back to homepage": "Back to homepage",
+	"Filters": "Filters",
+	"Ready to integrate": "Ready to integrate",
+	"With picture": "With picture",
+	"Anonymous": "Anonymous",
+	"No issues for now!": "No issues for now!",
+	"comment(s)": "comment(s)",
+	"Defined tags:": "Defined tags:",
+	"Complete": "Complete",
+	"Edit": "Edit",
+	"Erreur %s": "Erreur %s",
+	"Error %s : nothing but desert here...": "Error %s : nothing but desert here...",
+	"Homepage | Discover current projects": "Homepage | Discover current projects",
+	"Next to come: %s": "Next to come: %s",
+	"This project will start on %s, but it's never too soon to start! You can already improve data using our tools or improve the documentation.": "This project will start on %s, but it's never too soon to start! You can already improve data using our tools or improve the documentation.",
+	"Progress statistics will be shown at project start on %s.": "Progress statistics will be shown at project start on %s."
 }
