Improve readme & stuff

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -12,7 +12,7 @@
 	"All our projects": "Tous nos projets",
 	"Find all projects, tools, statistics and data.": "Retrouvez tous nos projets, outils, statistiques et données.",
 	"Copyright 2024-2025 Podoma - Released under AGPL 3.0 license": "Copyright 2024-2025 Podoma - Sous licence AGPL 3.0",
-	"Supported by": "Supporté par",
+	"Supported by": "Soutenu par",
 	"Adheres to": "Adhère aux",
 	"Principles for digital development": "Principes pour le développement numérique",
 	"Currently": "En ce moment",
