Add ability to open a panoramax link in the editor

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -16,6 +16,7 @@
 	"Via une note de carte": "With a map note",
 	"Via OSM.org": "With OSM.org",
 	"Via Mapillary": "With Mapillary",
+	"Via Panoramax": "With Panoramax",
 	"Retour à la page d'accueil": "Back to homepage",
 	"Projet du mois": "Project of the Month",
 	"Carte": "Map",
