--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -16,6 +16,7 @@
 	"Via une note de carte": "Via une note de carte",
 	"Via OSM.org": "Via OSM.org",
 	"Via Mapillary": "Via Mapillary",
+	"Via Panoramax": "Via Panoramax",
 	"Retour à la page d'accueil": "Retour à la page d'accueil",
 	"Projet du mois": "Projet du mois",
 	"Carte": "Carte",
