--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -131,5 +131,8 @@
 	"Contact": "Contact",
 	"changesets": "groupes de modifications",
 	"Registered on OSM on": "Inscription sur OSM le",
-	"participations": "participations"
+	"participations": "participations",
+	"Currently: %s prioritary projects": "En ce moment : %s projets prioritaires",
+	"Currently: %s": "En ce moment : %s",
+	"Discuss": "Discuter"
 }
