Add ability to set a link to a forum on project page

--- a/website/locales/en.json
+++ b/website/locales/en.json
@@ -67,6 +67,7 @@
 	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.": "This project of the month is finished, but mapping in OpenStreetMap goes on ! You can continue improve data using our tools and documentation.",
 	"Documentation complète": "Full documentation",
 	"Article de blog": "Blog article",
+	"En discuter": "Discuss",
 	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "All the data produced before, during and after the project of the month are available at the following addresses:",
 	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Find the previous projects of the month, their tools, statistics and data.",
 	"En savoir plus": "Read more about it",
