--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -67,6 +67,7 @@
 	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.": "Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.",
 	"Documentation complète": "Documentation complète",
 	"Article de blog": "Article de blog",
+	"En discuter": "En discuter",
 	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :",
 	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Retrouvez les précédents projets du mois, leurs outils, statistiques et données.",
 	"En savoir plus": "En savoir plus",
