Podoma, translations, & more settings (#363)

--- a/website/locales/fr.json
+++ b/website/locales/fr.json
@@ -1,161 +1,130 @@
 {
-	"Catalyseur d'énergies pour OpenStreetMap": "Catalyseur d'énergies pour OpenStreetMap",
-	"Projet du mois OpenStreetMap": "Projet du mois OpenStreetMap",
-	"Copyright 2024 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0": "Copyright 2024 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0",
-	"Un projet supporté par l'association": "Un projet supporté par l'association",
-	"Ce projet adhère aux": "Ce projet adhère aux",
-	"Principes pour le développement numérique": "Principes pour le développement numérique",
-	"Une erreur s'est produite à la connexion, veuillez réessayer": "Une erreur s'est produite à la connexion, veuillez réessayer",
-	"Rechercher un lieu...": "Rechercher un lieu...",
-	"Plus de détails": "Plus de détails",
-	"Avec l'éditeur intégré": "Avec l'éditeur intégré",
-	"Avec une appli mobile": "Avec une appli mobile",
-	"Avec iD": "Avec iD",
-	"Avec JOSM": "Avec JOSM",
-	"Via Osmose": "Via Osmose",
-	"Via une note de carte": "Via une note de carte",
-	"Via OSM.org": "Via OSM.org",
-	"Via Mapillary": "Via Mapillary",
-	"Via Panoramax": "Via Panoramax",
-	"Retour à la page d'accueil": "Retour à la page d'accueil",
-	"Projet du mois": "Projet du mois",
-	"Carte": "Carte",
-	"Liste": "Liste",
-	"Afficher uniquement les signalements": "Afficher uniquement les signalements",
-	"Prêt à intégrer": "Prêt à intégrer",
-	"Avec photo": "Avec photo",
-	"Anonymes": "Anonymes",
-	"Aucun signalement pour l'instant !": "Aucun signalement pour l'instant !",
-	"commentaire(s)": "commentaire(s)",
-	"Anonyme": "Anonyme",
-	"Ouvert": "Ouvert",
-	"Fermé": "Fermé",
-	"Réouvert": "Réouvert",
-	"Attributs renseignés :": "Attributs renseignés :",
-	"Compléter": "Compléter",
-	"Éditer": "Éditer",
-	"Se déconnecter": "Se déconnecter",
-	"S'inscrire / Se connecter": "S'inscrire / Se connecter",
-	"Utilisateur": "Utilisateur",
-	"Notifications non-lues": "Notifications non-lues",
+	"Logout": "Se déconnecter",
+	"Register / Login": "S'inscrire / Se connecter",
+	"An error happened during login, please retry": "Une erreur s'est produite à la connexion, veuillez réessayer",
+	"Home": "Accueil",
+	"Projects": "Projets",
+	"About": "À propos",
+	"User": "Utilisateur",
+	"Unread notifications": "Notifications non-lues",
 	"Notifications": "Notifications",
-	"Mes badges": "Mes badges",
-	"Merci !": "Merci !",
+	"My badges": "Mes badges",
+	"All our projects": "Tous nos projets",
+	"Find all projects, tools, statistics and data.": "Retrouvez tous nos projets, outils, statistiques et données.",
+	"Copyright 2024-2025 Podoma - Released under AGPL 3.0 license": "Copyright 2024-2025 Podoma - Sous licence AGPL 3.0",
+	"Supported by": "Soutenu par",
+	"Adheres to": "Adhère aux",
+	"Principles for digital development": "Principes pour le développement numérique",
+	"Currently": "En ce moment",
+	"Statistics": "Statistiques",
+	"Data": "Données",
+	"Contribute": "Contribuer",
+	"How to contribute": "Comment contribuer",
+	"This project is done, but mapping in OpenStreetMap never ends! You can continue to improve data using our tools and documentation.": "Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.",
+	"Full documentation": "Documentation complète",
 	"Podium": "Podium",
-	"Inscrivez-vous ou connectez-vous pour voir le podium": "Inscrivez-vous ou connectez-vous pour voir le podium",
-	"Pseudo": "Pseudo",
+	"Register or log in to see podium": "Inscrivez-vous ou connectez-vous pour voir le podium",
+	"Username": "Pseudo",
 	"Points": "Points",
-	"Avancement": "Avancement",
+	"Contributions per area": "Contributions par zone",
+	"Progress": "Progression",
 	"Notes": "Notes",
-	"Clés fréquentes": "Clés fréquentes",
-	"jours restants": "jours restants",
-	"jours de contributions": "jours de contributions",
-	"personnes ayant contribué": "personnes ayant contribué",
-	"En ce moment": "En ce moment",
-	"Statistiques": "Statistiques",
-	"Données": "Données",
-	"Retour à l'accueil": "Retour à l'accueil",
-	"Accueil | Découvrir le projet du mois": "Accueil | Découvrir le projet du mois",
-	"Erreur %s : rien que le désert ici...": "Erreur %s : rien que le désert ici...",
-	"Erreur %s": "Erreur %s",
-	"Contribuer": "Contribuer",
-	"Un grand merci à tous !": "Un grand merci à tous !",
-	"Merci à toutes les contributrices et tous les contributeurs d'avoir fait de ce projet un succès. Sans vous tous, OpenStreetMap ne serait rien !": "Merci à toutes les contributrices et tous les contributeurs d'avoir fait de ce projet un succès. Sans vous tous, OpenStreetMap ne serait rien !",
-	"Merci": "Merci",
-	"Voir les statistiques": "Voir les statistiques",
-	"Comment participer": "Comment participer",
-	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.": "Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.",
-	"Documentation complète": "Documentation complète",
-	"Article de blog": "Article de blog",
-	"En discuter": "En discuter",
-	"L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :": "L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :",
-	"Retrouvez les précédents projets du mois, leurs outils, statistiques et données.": "Retrouvez les précédents projets du mois, leurs outils, statistiques et données.",
-	"En savoir plus": "En savoir plus",
-	"Code source du projet": "Code source du projet",
-	"Projets précédents": "Projets précédents",
-	"Précédent": "Précédent",
-	"Suivant": "Suivant",
-	"Afficher/masquer la couche": "Afficher/masquer la couche",
-	"Télécharger un fichier KML pour contribuer avec une application de smartphone": "Télécharger un fichier KML pour contribuer avec une application de smartphone",
-	"Exporter les points à vérifier": "Exporter les points à vérifier",
-	"Objets à cet endroit": "Objets à cet endroit",
-	"Modifier la position": "Modifier la position",
-	"Oui": "Oui",
-	"Non": "Non",
-	"Ne sais pas": "Ne sais pas",
-	"Envoyer les informations sur OpenStreetMap": "Envoyer les informations sur OpenStreetMap",
-	"Retourner à la carte sans envoyer à OpenStreetMap": "Retourner à la carte sans envoyer à OpenStreetMap",
-	"Annuler": "Annuler",
-	"La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.": "La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.",
-	"Commentaire": "Commentaire",
-	"Envoyer le commentaire de carte sur OpenStreetMap": "Envoyer le commentaire de carte sur OpenStreetMap",
-	"Créer": "Créer",
-	"Envoi en cours, veuillez patienter": "Envoi en cours, veuillez patienter",
-	"Votre contribution a bien été prise en compte, merci pour votre participation !": "Votre contribution a bien été prise en compte, merci pour votre participation !",
-	"Retour à la carte": "Retour à la carte",
+	"Frequent keys": "Clés fréquentes",
+	"Last update: ": "Dernière mise à jour : ",
+	"contributors": "personnes contributrices",
+	"Total amount": "Nombre total",
+	"Country": "Pays",
+	"Region": "Région",
+	"Department": "Département",
+	"City": "Ville",
+	"Find all data directly on OpenStreetMap website.": "Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.",
+	"Other projects": "Autres projets",
+	"Find other projects, their tools, statistics and data.": "Retrouvez d'autres projets, leurs outils, statistiques et données.",
+	"Previous": "Précédent",
+	"Next": "Suivant",
+	"Go back to homepage": "Retour à l'accueil",
+	"Search for a place...": "Rechercher un lieu...",
+	"Map": "Carte",
+	"List": "Liste",
+	"Show/hide layer": "Afficher/masquer la couche",
+	"Download a KML file to contribute with a smartphone app": "Télécharger un fichier KML pour contribuer avec une application de smartphone",
+	"Export features to check": "Exporter les objets à vérifier",
+	"List of features": "Liste d'objets",
+	"Edit location": "Modifier la position",
+	"Send info to OpenStreetMap": "Envoyer les infos à OpenStreetMap",
+	"Go back to map without sending to OpenStreetMap": "Retourner à la carte sans envoyer à OpenStreetMap",
+	"Cancel": "Annumer",
+	"The creation of notes is reserved for ambiguous cases. If the situation is obvious, prefer another editing mode.": "La création de notes de carte est à réserver aux cas ambigus, si la situation est claire préférez un autre mode d'édition.",
+	"Comment": "Commenter",
+	"Send map comment to OpenStreetMap": "Envoyer le commentaire de carte sur OpenStreetMap",
+	"Create": "Créer",
+	"Sending in progress, please wait": "Envoi en cours, merci de patienter",
+	"Your contribution has been taken into account, thank you!": "Votre contribution a bien été prise en compte, merci pour votre participation !",
+	"Go back to map": "Retourner à la carte",
 	"OK": "OK",
-	"Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap": "Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap",
-	"Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap": "Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap",
-	"Si vous quittez la page, les modifications en cours seront perdues.": "Si vous quittez la page, les modifications en cours seront perdues.",
-	"Valider": "Valider",
-	"Des données sont manquantes, merci de réessayer": "Des données sont manquantes, merci de réessayer",
-	"Une erreur s'est produite, merci de réessayer plus tard": "Une erreur s'est produite, merci de réessayer plus tard",
-	"Objet concerné :": "Objet concerné :",
-	"Plus d'infos sur la résolution de cette note": "Plus d'infos sur la résolution de cette note",
-	"Badges obtenus": "Badges obtenus",
-	"Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !": "Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !",
-	"Nouveau badge": "Nouveau badge",
-	"Voir tous les badges": "Voir tous les badges",
-	"Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)": "Marqué comme résolu dans le cadre du projet du mois (via projetdumois.fr)",
-	"Une erreur s'est produite lors de la modification de la note": "Une erreur s'est produite lors de la modification de la note",
-	"Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard": "Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard",
-	"Attributs": "Attributs",
-	"Attributs à renseigner": "Attributs à renseigner",
-	"C'est fait": "C'est fait",
-	"Intégrer cet objet": "Intégrer cet objet",
-	"Vous devez être connecté pour marquer la note comme résolue.": "Vous devez être connecté pour marquer la note comme résolue.",
-	"Participer à la discussion sur cette note": "Participer à la discussion sur cette note",
-	"Zoomez ou lancez une recherche pour commencer": "Zoomez ou lancez une recherche pour commencer",
-	"Chargement en cours": "Chargement en cours",
-	"Déplacer la carte pour positionner l'objet à créer": "Déplacer la carte pour positionner l'objet à créer",
-	"Afficher / masquer l'imagerie satellite": "Afficher / masquer l'imagerie satellite",
-	"Profil OpenStreetMap": "Profil OpenStreetMap",
-	"Contacter": "Contacter",
-	"groupes de modifications": "groupes de modifications",
-	"Inscrit sur OSM le": "Inscrit sur OSM le",
-	"participations aux projets du mois": "participations aux projets du mois",
-	"Accueil": "Accueil",
-	"Autres attributs": "Autres attributs",
-	"Participer": "Participer",
-	"En ce moment : %s": "En ce moment : %s",
-	"Retrouvez d'autres projets du mois, leurs outils, statistiques et données.": "Retrouvez d'autres projets du mois, leurs outils, statistiques et données.",
-	"Autres projets": "Autres projets",
-	"En ce moment : %s projets en cours": "En ce moment : %s projets en cours",
-	"OpenStreetMap France": "OpenStreetMap France",
-	"Placer à la position exacte": "Placer à la position exacte",
-	"Rien ici / déjà fait": "Rien ici / déjà fait",
-	"Filtres": "Filtres",
-	"Contributions par zone": "Contributions par zone",
-	"Pays": "Pays",
-	"Région": "Région",
-	"Département": "Département",
-	"Commune": "Commune",
-	"Contributions": "Contributions",
-	"Nombre total": "Nombre total",
-	"Maintenance en cours": "Maintenance en cours",
-	"Le site est en cours de maintenance, la magie opère en coulisses !": "Le site est en cours de maintenance, la magie opère en coulisses !",
-	"Veuillez réessayer un peu plus tard, merci pour votre compréhension.": "Veuillez réessayer un peu plus tard, merci pour votre compréhension.",
-	"D'autres projets": "D'autres projets",
-	"Plus d'infos sur ce champ": "Plus d'infos sur ce champ",
-	"Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.": "Retrouvez l'ensemble des données directement sur le site d'OpenStreetMap.",
-	"Catalyseur d'énergies pour OpenStreetMap v%s": "Catalyseur d'énergies pour OpenStreetMap v%s",
-	"A propos": "A propos",
-	"Les projets": "Les projets",
-	"À propos": "À propos",
-	"En ce moment : %s projets prioritaires": "En ce moment : %s projets prioritaires",
-	"Tous nos projets": "Tous nos projets",
-	"Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données.": "Retrouvez l'ensemble des projets du mois, leurs outils, statistiques et données.",
-	"Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.": "Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez contribuer à d'autres thématiques.",
-	"Projet terminé": "Projet terminé",
-	"Dernière mise à jour : ": "Dernière mise à jour : "
+	"You are logged in: this form will directly edit OpenStreetMap": "Vous êtes connecté : ce formulaire va éditer directement OpenStreetMap",
+	"You are not logged in: this form will create an OpenStreetMap note": "Vous n'êtes pas connecté : ce formulaire va créer une note dans OpenStreetMap",
+	"If you leave the page, the current modifications will be lost.": "Si vous quittez la page, les modifications en cours seront perdues.",
+	"Validate": "Valider",
+	"Some data are missing, please try again": "Des données sont manquantes, merci de réessayer",
+	"An error occurred, please try again later": "Une erreur s'est produite, merci de réessayer plus tard",
+	"Related feature:": "Objet concerné :",
+	"Tags set:": "Attributs renseignés :",
+	"More about the resolution of this note": "Plus d'infos sur la résolution de cette note",
+	"Badges received": "Badges reçus",
+	"You are not logged in with an OpenStreetMap account. Register or log in to collect badges!": "Vous n'êtes pas connecté avec un compte OpenStreetMap. Inscrivez-vous ou connectez-vous pour collecter des badges !",
+	"Back to map": "Retour à la carte",
+	"New badges": "Nouveaux badges",
+	"Show all badges": "Voir tous les badges",
+	"More details": "Plus d'infos",
+	"With integrated editor": "Avec l'éditeur intégré",
+	"With mobile app": "Avec une appli mobile",
+	"With iD": "Via iD",
+	"With JOSM": "Via JOSM",
+	"With Osmose": "Via Osmose",
+	"With a map note": "Via une note de carte",
+	"With OSM.org": "Via OSM.org",
+	"With Mapillary": "Via Mapillary",
+	"Marked as solved during the project": "Marqué comme résolu dans le cadre du projet",
+	"An error occurred while editing the note": "Une erreur s'est produite lors de la modification de la note",
+	"An error occured during upload, please try again later": "Une erreur s'est produite lors de l'enregistrement, merci de réessayer plus tard",
+	"Attributes": "Attributs",
+	"More details about this field": "Plus d'infos sur ce champ",
+	"Yes": "Oui",
+	"No": "Non",
+	"Other tags": "Autres attributs",
+	"Tags to set": "Attributs à définir",
+	"It's done": "C'est fait",
+	"Nothing here / Already done": "Rien ici / Déjà fait",
+	"Integrate this feature": "Intégrer cet objet",
+	"Opened": "Ouvert",
+	"Closed": "Fermé",
+	"Re-opened": "Ré-ouvert",
+	"Commented": "Commenté",
+	"You must be logged in to set the note as resolved.": "Vous devez être connecté pour marquer la note comme résolue.",
+	"💬 Comment": "💬 Commenter",
+	"Contribute to the discussion on this note": "Participer à la discussion sur cette note",
+	"Zoom in or search a place to start": "Zoomez ou lancez une recherche pour commencer",
+	"Loading in progress": "Chargement en cours",
+	"Move to exact location": "Déplacer à l'emplacement exact",
+	"Back to homepage": "Retour à l'accueil",
+	"Filters": "Filtres",
+	"Ready to integrate": "Prêt à intégrer",
+	"With picture": "Avec photo",
+	"Anonymous": "Anonyme",
+	"No issues for now!": "Aucun signalement pour l'instant !",
+	"comment(s)": "commentaire(s)",
+	"Defined tags:": "Attributs renseignés :",
+	"Complete": "Compléter",
+	"Edit": "Éditer",
+	"Error %s": "Erreur %s",
+	"Error %s : nothing but desert here...": "Erreur %s : rien que le désert ici...",
+	"Homepage | Discover current projects": "Accueil | Découvrir les projets en cours",
+	"Next to come: %s": "Prochainement : %s",
+	"This project will start on %s, but it's never too soon to start! You can already improve data using our tools or improve the documentation.": "Ce project va débuter le %s, mais il n'est jamais trop tôt pour se lancer ! Vous pouvez dès à présent améliorer les données à l'aide de nos outils et documentations.",
+	"Progress statistics will be shown at project start on %s.": "Les statistiques de progression seront affichées au démarrage du projet le %s.",
+	"Blog article": "Article de blog",
+	"All the data produced before, during and after the project are available at the following addresses:": "Toutes les données produites avant, pendant et après le projet sont disponibles aux adresses suivantes :",
+	"I don't know": "Je ne sais pas",
+	"With Panoramax": "Via Panoramax"
 }
